feat: ajustes vistas de listar y login finales

--- a/debts/src/app/auth/login/pages/login.component.html
+++ b/debts/src/app/auth/login/pages/login.component.html
@@ -98,8 +98,9 @@
               </div>
               <a
                 class="font-medium no-underline ml-2 text-right cursor-pointer text-primary"
+                routerLink="/crear-cuenta"
               >
-                ¿Olvidó su contraseña?
+                Crear cuenta
               </a>
             </div>
             <button
